# cappr

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  demo.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.py  thoughts.md
.github/workflows/: python-publish.yml  test.yml
analysis/computational/: README.md  fast.py  slow.py  test_fast.py  test_utils.py  utils.py
callm/: __init__.py  example.py
callm/huggingface/: __init__.py  classify.py  classify_slow.py  docstrings.py  utils.py
callm/openai/: __init__.py  api.py  classify.py  docstrings.py
callm/utils/: batch.py  check.py  classify.py  wrap.py
cappr/: __init__.py  _example.py  example.py
cappr/_utils/: batch.py  classify.py
cappr/huggingface/: __init__.py  _classify_slow.py  _utils.py  classify.py
cappr/openai/: __init__.py  api.py  classify.py
cappr/utils/: __init__.py  batch.py  check.py  classify.py
demos/: README.md  auto_gptq.ipynb  computational_analysis.ipynb  copa.ipynb  llama2.ipynb  llama_cpp.ipynb  politeness.ipynb  utils.py  wsc.ipynb
demos/huggingface/: auto_gptq.ipynb  autoawq.ipynb  banking_77_classes.ipynb  banking_77_classes_auto_gptq.ipynb  craigslist_bargains.ipynb  dpo.ipynb  quick_check.ipynb  sciq.ipynb  tweet_emotion_multilabel.ipynb
demos/huggingface/superglue/: copa.ipynb
demos/llama2/: copa.ipynb  quick_check_correctness.ipynb
demos/llama_cpp/: ag_news.ipynb
demos/llama_cpp/superglue/: copa.ipynb
demos/openai/: politeness.ipynb
demos/openai/raft/: ade.ipynb  b77.ipynb  nis.ipynb  ose.ipynb  over.ipynb  sot.ipynb  sri.ipynb  tai.ipynb  tc.ipynb  teh.ipynb  tos.ipynb
demos/openai/superglue/: copa.ipynb  wsc.ipynb
demos/raft/: README.md  ade.ipynb  b77.ipynb  nis.ipynb  ose.ipynb  over.ipynb  sot.ipynb  sri.ipynb  tai.ipynb  tc.ipynb  teh.ipynb  tos.ipynb
demos/superglue/: copa.ipynb  copa_test_set_pred_probs.npy  wsc.ipynb
docs/source/: 1_is_for_me.rst  2_motivation.rst  3_installation.rst  4_user_guide.rst  5_examples.rst  6_computational_performance.rst  7_future_research.rst  a_note_on_workflow.rst  about.rst  cappr.huggingface.classify.rst  cappr.huggingface.classify_no_batch.rst  cappr.huggingface.classify_no_cache.rst  cappr.huggingface.classify_no_cache_no_batch.rst  cappr.huggingface.rst  cappr.llama_cpp.classify.rst  cappr.llama_cpp.rst  cappr.openai.api.rst  cappr.openai.classify.rst  cappr.openai.rst  cappr.rst  cappr.utils.classify.rst  cappr.utils.rst  computational_performance.rst  conf.py  design.rst  design_choices.rst  examples.rst  future_research.rst  index.rst  installation.rst  is_for_me.rst  local.rst  local_setup.rst  motivation.rst  other_llm_structuring_tools.rst  protocol.rst  related_work.rst  research.rst  select_a_language_model.rst  select_a_prompt_completion_format.rst  (+5 more)
docs/source/_static/: spider_plot.html
docs/source/_static/css/: custom.css
lm_classification/: __init__.py  classify.py  example.py  utils.py
lm_classification/huggingface/: __init__.py  classify.py  classify_slow.py  utils.py
lm_classification/openai/: api.py  classify.py
lm_classification/utils/: __init__.py  api.py  batch.py  classify.py  wrap.py
src/cappr/: __init__.py  _example.py
src/cappr/huggingface/: __init__.py  _classify_slow.py  _patch_tokenizer.py  _utils.py  classify.py  classify_.py  classify_no_batch.py  classify_no_cache.py  classify_no_cache_no_batch.py
src/cappr/llama_cpp/: __init__.py  _classify_no_cache.py  _utils.py  classify.py
src/cappr/openai/: __init__.py  api.py  classify.py
src/cappr/utils/: __init__.py  _batch.py  _check.py  _no_cache.py  classify.py
tests/: _base.py  _protocol.py  _test.py  _test_content.py  _test_form.py  test_Example.py  test_batch.py  test_classify.py  test_utils.py
tests/_llama_cpp/: test_llama_cpp_classify.py
tests/huggingface/: test_huggingface_classify.py
tests/llama_cpp/: test_llama_cpp_classify.py
tests/openai/: test_openai_api.py  test_openai_classify.py
tests/utils/: test_batch.py  test_utils__batch.py  test_utils_classify.py  test_wrap.py
