[build-system] # TODO: where did I get this from / why is it like this lmao
requires = ["setuptools >= 45", "wheel", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff]
include = ["*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# E731:
#     Do not assign a `lambda` expression, use a `def`
#     Reason: https://stackoverflow.com/questions/25010167/e731-do-not-assign-a-lambda-expression-use-a-def
ignore = ["E731"]
