[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cappr"
dynamic = ["version"]
description = "Completion After Prompt Probability. Make your LLM make a choice"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.21.0",
    "tqdm>=4.27.0",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    { name = "Kush Dubey", email = "kushdubey63@gmail.com" },
]
maintainers = [
    { name = "Kush Dubey", email = "kushdubey63@gmail.com" },
]

[project.optional-dependencies]
openai = ["openai>=0.26.0", "tiktoken>=0.2.0"]
hf = ["transformers[torch]>=4.31.0"]
llama-cpp = ["llama-cpp-python>=0.2.11"]
all = ["cappr[openai,hf,llama-cpp]"]
hf-dev = [
    "huggingface-hub>=0.16.4",  # to download models from the hub
    "peft>=0.13.2",  # to test LoRA
    "protobuf>=5.27.2",  # to test Mistral tokenization
    "sentencepiece>=0.1.99",  # to run Llama tokenization
    "transformers[torch]>=4.35.0",  # to test AutoGPTQ on CPU and AutoAWQ with caching
]
llama-cpp-dev = ["llama-cpp-python>=0.2.13"]
demos = [
    "cappr[openai,hf-dev,llama-cpp-dev]",
    "datasets>=2.10.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.3",
    "pandas>=1.5.3",
    "scikit-learn>=1.2.2",
]
dev = [
    "cappr[demos]",
    "docutils<0.19",  # For readthedocs. TODO: get rid of this specifier
    "pre-commit>=3.5.0",
    "pydata-sphinx-theme>=0.13.1",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.7.0",
    "sphinx>=6.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-togglebutton>=0.3.2",
    "sphinxcontrib-napoleon>=0.7",
    "twine>=4.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "cappr.__version__"}

[tool.ruff]
include = ["*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# E731:
#     Do not assign a `lambda` expression, use a `def`
ignore = ["E731"]

[project.urls]
Homepage = "https://github.com/kddubey/cappr"
Documentation = "https://cappr.readthedocs.io/en/latest/"
Issues = "https://github.com/kddubey/cappr/issues"
